--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "cheeseburger-menu": "0.0.13",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
-    "react-scripts": "3.1.1"
+    "react-hamburger-menu": "^1.1.1",
+    "react-id-swiper": "^2.3.2",
+    "react-router-dom": "^5.0.1",
+    "react-scripts": "3.1.1",
+    "swiper": "^4.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
