--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-id-swiper": "^2.3.2",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
+    "reactjs-popup": "^1.4.2",
     "swiper": "^4.5.0"
   },
   "scripts": {
