--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.10.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
     "cheeseburger-menu": "0.0.13",
+    "clarifai": "^2.9.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-hamburger-menu": "^1.1.1",
