--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.9.0",
     "react-hamburger-menu": "^1.1.1",
     "react-id-swiper": "^2.3.2",
+    "react-particles-js": "^2.7.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
     "reactjs-popup": "^1.4.2",
