--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.22",
-    "@fortawesome/free-solid-svg-icons": "^5.10.2",
-    "@fortawesome/react-fontawesome": "^0.1.4",
     "cheeseburger-menu": "0.0.13",
     "clarifai": "^2.9.1",
     "react": "^16.9.0",
@@ -14,8 +11,7 @@
     "react-particles-js": "^2.7.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.1.1",
-    "reactjs-popup": "^1.4.2",
-    "swiper": "^4.5.0"
+    "reactjs-popup": "^1.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
