--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-hamburger-menu": "^1.1.1",
     "react-particles-js": "^2.7.0",
     "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1",
+    "react-scripts": "^3.3.0",
     "reactjs-popup": "^1.4.2"
   },
   "scripts": {
