--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "dependencies": {
     "cheeseburger-menu": "0.0.13",
     "clarifai": "^2.9.1",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-hamburger-menu": "^1.1.1",
-    "react-particles-js": "^2.7.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "^3.3.0",
-    "reactjs-popup": "^1.4.2"
+    "react-notifications-component": "^2.4.0",
+    "react-particles-js": "^2.7.1",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1",
+    "reactjs-popup": "^1.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
